Wed May  4 17:53:15 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/set.rb (Set#{delete_if,keep_if,collect!,reject!,select!,classify,divide},
	  SortedSet#{delete_if,keep_if}): Return sized enumerators.

	* test/test_set.rb: add test for above.

Tue May  3 23:25:48 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* numeric.c: [DOC] Update result of 123456789 ** -2.
	  [ruby-dev:49606] [Bug #12339]

Tue May  3 23:13:16 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* internal.h (RCOMPLEX_SET_IMAG): undef RCOMPLEX_SET_IMAG
	  instead of duplicated undef RCOMPLEX_SET_REAL.

Tue May  3 22:55:07 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* complex.c (rb_complex_set_imag): Fix to properly set imag
	  of complex.

Tue May  3 22:19:55 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (warnflags): use -std=gnu99 instead of
	  -std=iso9899:1999. [Feature #12336]

Tue May  3 22:10:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (count_utf8_lead_bytes_with_word): Use __builtin_popcount
	  only if it can use SSE 4.2 POPCNT whose latency is 3 cycle.

	* internal.h (rb_popcount64): use __builtin_popcountll because now
	  it is in fast path.

Tue May  3 14:19:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_if_gen): set newline flag to NODE_IF to trace all
	  if/elsif statements.  [ruby-core:67720] [Bug #10763]

Tue May  3 05:35:54 2016  Eric Wong  <e@80x24.org>

	* process.c (disable_child_handler_fork_child):
	  initialize handler for SIGPIPE for !POSIX_SIGNAL

Mon May  2 23:03:42 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_utruncate): implements new
	  truncate alternative which accepts UTF-8 path.

	* file.c (truncate): use above function.
	  [Bug #12340]

Mon May  2 20:59:21 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (str_coderange): to avoid function call when the string already
	  has coderange information.

	* re.c (rb_reg_prepare_enc): add shortcut path when the regexp has