@@ -111,6 +111,12 @@ class HTTPHeaderTest < Test::Unit::TestCase
       assert_equal 'my-header', k
       assert_equal 'test', v
     end
+    e = @c.each
+    assert_equal 1, e.size
+    e.each do |k, v|
+      assert_equal 'my-header', k
+      assert_equal 'test', v
+    end
   end
 
   def test_each_key
@@ -121,6 +127,12 @@ class HTTPHeaderTest < Test::Unit::TestCase
     @c.each_key do |k|
       assert_equal 'my-header', k
     end
+    e = @c.each_key
+    assert_equal 1, e.size
+    e.each do |k|
+      assert_equal 'my-header', k
+    end
+  end
 
   def test_each_capitalized_name
     @c['my-header'] = 'test'
@@ -128,6 +140,11 @@ class HTTPHeaderTest < Test::Unit::TestCase
       assert_equal 'My-Header', k
     end
     @c.each_capitalized_name do |k|
+      assert_equal 'My-Header', k
+    end
+    e = @c.each_capitalized_name
+    assert_equal 1, e.size
+    e.each do |k|
       assert_equal 'My-Header', k
     end
   end
@@ -140,11 +157,22 @@ class HTTPHeaderTest < Test::Unit::TestCase
     @c.each_value do |v|
       assert_equal 'test', v
     end
+    e = @c.each_value
+    assert_equal 1, e.size
+    e.each do |v|
+      assert_equal 'test', v
+    end
   end
 
   def test_canonical_each
     @c['my-header'] = ['a', 'b']
     @c.canonical_each do |k,v|
+      assert_equal 'My-Header', k
+      assert_equal 'a, b', v
+    end
+    e = @c.canonical_each
+    assert_equal 1, e.size
+    e.each do |k,v|
       assert_equal 'My-Header', k
       assert_equal 'a, b', v
     end
@@ -156,12 +184,24 @@ class HTTPHeaderTest < Test::Unit::TestCase
       assert_equal 'My-Header', k
       assert_equal 'a, b', v
     end
+    e = @c.each_capitalized
+    assert_equal 1, e.size
+    e.each do |k,v|
+      assert_equal 'My-Header', k
+      assert_equal 'a, b', v
+    end
   end
 
   def test_each_capitalized_with_symbol
     @c[:my_header] = ['a', 'b']
     @c.each_capitalized do |k,v|
       assert_equal "My_header", k
+      assert_equal 'a, b', v
+    end
+    e = @c.each_capitalized
+    assert_equal 1, e.size
+    e.each do |k,v|
+      assert_equal 'My_header', k
       assert_equal 'a, b', v
     end
   end
