@@ -1,3 +1,11 @@
+Wed May  4 18:38:00 2016  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* lib/net/http/header.rb (Net::HTTPHeader#{each_header,each_name,
+	  each_capitalized_name,each_value,each_capitalized}): Return
+	  sized enumerators.
+
+	* test/net/http/test_httpheader.rb: add test for above.
+
 Wed May  4 17:53:15 2016  Kazuki Tsujimoto  <kazuki@callcc.net>
 
 	* lib/set.rb (Set#{delete_if,keep_if,collect!,reject!,select!,classify,divide},
